Using Provider as changeStates

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -18,4 +19,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 assets:
-  -assets/videos/  
+  -assets/videos/ 
